# pond

./: .flatc-version  .gitignore  Cargo.toml  README.md  niteshift-setup.sh  test.out
.github/workflows/: pr.yaml
cfs-bench/: Cargo.toml
cfs-bench/src/: main.rs
cfs-cli/: Cargo.toml
cfs-cli/src/: main.rs
cfs-client/: Cargo.toml
cfs-client/src/: file.rs  lib.rs
cfs-core/: Cargo.toml
cfs-core/fbs/: dirent.fbs  dirent_index.fbs  metadata.fbs  volume.fbs  volume_header.fbs
cfs-core/src/: cache.rs  client.rs  dirent.fbs.rs  dirent_index.fbs.rs  error.rs  file.rs  flatbuffer.rs  lib.rs  location.rs  main.rs  metadata.fbs.rs  metadata.rs  object_store.rs  read.rs  storage.rs  volume.fbs.rs  volume.rs  volume_header.fbs.rs
cfs-core/src/volume/: dirent.rs  dirent_index.rs  staging.rs
cfs-fuse/: Cargo.toml  build.rs
cfs-fuse/src/: client.rs  fuse.rs  lib.rs  main.rs  trace.rs
cfs-fuse/tests/: fuzz.rs
cfs-md/: Cargo.toml
cfs-md/fbs/: volume.fbs  volume_info.fbs
cfs-md/src/: lib.rs  main.rs  volume.fbs.rs  volume.rs  volume_info.fbs.rs  volume_info.rs
cfs-server/: Cargo.toml
cfs-server/src/: main.rs
doc/: SEMANTICS.md
examples/: README.md  mountpoint-nocache.ipynb  pond-19GiB.ipynb
examples/benchmarks/: README.md  mountpoint.ipynb  pond-2GiB.ipynb
examples/hello-pond-src/: a  b  c
pond/: Cargo.toml
pond-core/: Cargo.toml
pond-core/src/: cache.rs  lib.rs  location.rs  metadata.rs  storage.rs  volume.rs
pond-fs/: Cargo.toml  build.rs
pond-fs/src/: fuse.rs  lib.rs  log.rs  main.rs
pond-fs/tests/: fuzz.rs
pond-rs/: Cargo.toml
pond-rs/src/: adapter.rs  cmd.rs  file.rs  lib.rs  volume.rs
pond-rs/tests/: fuzz.rs
pond/examples/: fs-demo.rs  inmemory-demo.rs  s3-demo.rs
pond/fbs/: metadata.fbs
pond/src/: adapter.rs  cache.rs  client.rs  error.rs  file.rs  lib.rs  location.rs  metadata.fbs.rs  metadata.rs  metrics.rs  path.rs  stats.rs  storage.rs  volume.rs
pond/tests/: fuzz.rs
xtask/: Cargo.toml  build.rs
xtask/src/: main.rs
