[workspace]

resolver = "2"

members = [
    "pond",
    "pond-fs",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/junctionlabs/pond"
homepage = "https://junctionlabs.io"

[workspace.dependencies]
anyhow = "1.0"
arbtest = "0.3"
arbitrary = { version = "1.3", features = ["derive"] }
bytes = "1.10"
bytesize = "2.1.0"
clap = { version = "4.5.47", features = ["derive"] }
flatbuffers = "25.2"
foyer = "0.20.0"
foyer-memory = "0.20.0"
futures = "0.3.31"
fuser = { version = "0.16", default-features = false }
libc = "0.2"
nix = "0.29" # don't require a newer version than fuser if possible
object_store = { version = "0.12.3", features = ["aws"] }
rand = "0.9.2"
tempfile = "3"
thiserror = "2.0.16"
tokio = { version = "1.47", default-features = false }
tracing = "0.1.41"
tracing-subscriber = "0.3"
url = "2.5.7"
walkdir = "2"

pond = { version = "0.1.0", path = "./pond", default-features = false }
pond-client = { version = "0.1.0", path = "./pond-client", default-features = false }
