[package]
name = "cfs-bench"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
cfs-core.workspace = true

anyhow.workspace = true
bytes.workspace = true
bytesize.workspace = true
clap.workspace = true
object_store.workspace = true
tokio.workspace = true
