[package]
name = "cfs-client"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
cfs-core.workspace = true
cfs-md.workspace = true

object_store = { workspace = true, features = ["aws"] }
reqwest.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
