[package]
name = "cfs-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes.workspace = true
dashmap.workspace = true
flatbuffers.workspace = true
futures.workspace = true
object_store.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
paste.workspace = true
rand.workspace = true
tempfile.workspace = true
