[package]
name = "cfs-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes.workspace = true
dashmap.workspace = true
flatbuffers.workspace = true
foyer.workspace = true
foyer-memory.workspace = true
futures.workspace = true
lasso.workspace = true
object_store.workspace = true
once_cell.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tokio.workspace = true
tempfile.workspace = true

[dev-dependencies]
rand.workspace = true
tempfile.workspace = true
