[package]
name = "cfs-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes.workspace = true
flatbuffers.workspace = true
foyer.workspace = true
foyer-memory.workspace = true
futures.workspace = true
object_store.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
tempfile.workspace = true
url.workspace = true
walkdir.workspace = true

[dev-dependencies]
rand.workspace = true
arbtest.workspace = true
arbitrary.workspace = true
