[package]
name = "cfs-fuse"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
bytesize.workspace = true
clap = { workspace = true, features = ["derive"] }
fuser = { workspace = true, default_features = false, features = [] }
libc.workspace = true
tokio = {workspace = true, features = ["rt-multi-thread", "io-util", "net"]}
tracing-subscriber = { workspace = true, features = ["env-filter"]}

cfs-core.workspace = true

[dev-dependencies]
arbitrary.workspace = true
arbtest.workspace = true
walkdir.workspace = true
