[package]
name = "cfs-fuse"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
bytesize.workspace = true
clap = { workspace = true, features = ["derive"] }
libc.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "io-util", "net"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

cfs-core.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
fuser = { workspace = true, default_features = false, features = ["libfuse"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
fuser = { workspace = true, default_features = false, features = [] }

[dev-dependencies]
arbitrary.workspace = true
arbtest.workspace = true
walkdir.workspace = true
