[package]
name = "cfs-server"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
cfs-md.workspace = true

axum.workspace = true
bytes.workspace = true
flatbuffers = { workspace = true, features = ["serialize"]}
tokio.workspace = true
tracing.workspace = true
