[package]
name = "pond-fs"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "pond"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bytesize.workspace = true
clap = { workspace = true, features = ["derive", "string"] }
libc.workspace = true
nix = { workspace = true, features = ["process", "poll", "signal"] }
signal-hook.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "io-util", "net"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

pond.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
fuser = { workspace = true, default_features = false, features = ["libfuse"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
fuser = { workspace = true, default_features = false, features = [] }

[dev-dependencies]
arbitrary.workspace = true
arbtest.workspace = true
walkdir.workspace = true
