[package]
name = "pond"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
bytes.workspace = true
futures.workspace = true
paste.workspace = true
tokio.workspace = true

pond-core.workspace = true

[dev-dependencies]
arbtest.workspace = true
arbitrary.workspace = true
tempfile.workspace = true
